Changelog
=========

2.13-dev - (unreleased)
-----------------------

2.12 - (2010-12-13)
-------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]

2.11 - (2010-12-06)
-------------------
 * Change: renamed the soer search template to advanced-search, since search is plone reserved and stopped working [demarant]
 * Bug fix: disabled enter key event on soer frontpage free text search, since it was not working, fixes #3916 [demarant]
 * Bug fix: max characters for soer boxes is lowered to 300, fixes #3888 [demarant]
 * Bug fix: fixed many layout issues on soer frontpage,synched from custom, fixes #3912 [demarant]
 * Change: compromised time of 7s for message portlet slide on soer frontpage [demarant]
 * Bug fix: id to soer frontpage search must be c4 [demarant]
 * removed unnecessary loop in soer_fronpage.js that was putting IE8 on it knees #3931 [vincisas]
 * added related pages at the bottom since the related portlets are removed in document_view in ZMI custom #3927 [vincisas]
 * remove related items code from file_view, we have everything in main_template. #3926 [vincisas]
 * Change: customized at_download.py to raise NotFound instead of raising errors [tiberich #3934]
 * Bug fix: fixed RSSFeedRecipe_icon.png cache settings [ghicaale #3943]

2.10 - (2010-11-26)
-------------------
 * Change: Added more links under facts/messages boxes and other boxes on SOER frontpage [demarant]
 * Bug fix: re-enabled the soer frontpage tag cloud and adjusted its design [demarant]
 * Bug fix: The tagcloud portlet's items are not updated according with the counting [voineali #3860]
 * Change: longer delay when playing keyfacts/keymessages [demarant]
 * Bug fix: layout of key facts boxes, limit the text length from 380 to 320 after some more testing refs #3888 [demarant]
 * Change: style: make all countries names uppercase in soer countries facet, for conformity [demarant]