@@ -34,6 +34,9 @@
     enabled="True" expression="" id="eea-fancybox.js" inline="False"
     position-after="cssQuery.js"/>
  <javascript cacheable="True" compression="safe" cookable="True"
+    enabled="True" expression="" id="framebreak.js" inline="False"
+    position-after="cssQuery.js"/>
+ <javascript cacheable="True" compression="safe" cookable="True"
     enabled="True" expression="python: portal.portal_membership.isAnonymousUser() and request.get('jsdisable','') != 'jquery'" id="design.js" inline="False"
     position-before="cssQuery.js"/>
  <javascript cacheable="True" compression="safe" cookable="True"
