@@ -1,0 +1,15 @@
+function breakout_of_frame()
+{
+  // see http://www.thesitewizard.com/archive/framebreak.shtml
+  // for an explanation of this script and how to use it on your
+  // own website
+  if (top.location != location) {
+    top.location.href = document.location.href ;
+  }
+}
+
+
+$(document).ready(function(){
+    breakout_of_frame();
+});
+
